--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Omnipay\\IpgOnline\\": "src"
+            "Omnipay\\IpgOnline\\": "src/"
         }
     },
     "require": {
